RESOLVED FIXED308407
[macOS] Occasional crash when dropping files over `WKWebView` under performDragWithLegacyFiles
https://bugs.webkit.org/show_bug.cgi?id=308407
Summary [macOS] Occasional crash when dropping files over `WKWebView` under performDr...
Wenson Hsieh
Reported 2026-02-21 17:06:46 PST
Attachments
Wenson Hsieh
Comment 1 2026-02-21 17:33:23 PST
EWS
Comment 2 2026-02-22 21:34:11 PST
Committed 308023@main (a30d85f9c75d): <https://commits.webkit.org/308023@main> Reviewed commits have been landed. Closing PR #59182 and removing active labels.
EWS
Comment 3 2026-02-23 03:12:09 PST
Committed 305413.336@safari-7624-branch (5cc689715084): <https://commits.webkit.org/305413.336@safari-7624-branch> Reviewed commits have been landed. Closing PR #4535 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.